        Fix unicode string CUR and LEN (#142, #162)
        Save HvTOTALKEYS at run-time as max added to the number of run-time added keys (#178)
        Fix UV uvuformat on 32bit -Duse64bitint (#145)
        op_pmreplstart is now run-time initialized >= 5.10 (#160)
        Fix UTF8 hashkeys (HEK) mostly (#200), but not yet testc.sh 2001 (compile-time
          stored utf8 heks)
        * perlcc (2.14): new option --dryrun, -v5 does not -Dsp,-v
         new option -f passthru to C and CC
        * perlcc (2.15): fixed default --spawn: use waitpid which was broken for parallel builds.
        fixed warning Prototype mismatch: sub main::gettimeofday: none vs () at perlcc line 261
        improved --version
        added --perlopts to handle -DALLOW_PERL_OPTIONS
	* CC (1.13): Use the B::C integer and double precision logic (ivx, nvx).
        Fixed double precision to 16 digits. The nbody shootout is now 2x faster than perl.
        Added optimizations: -fno-magic, -fno-autovivify
        Detect "no autovivification;" pragma.
        New -fno-taint, deprecate -fomit_taint
        Fix amagic_generation which was removed with 5.17
	* Bytecode (1.14): fixed require and op_first, issue 97
	Fixed regex_pad offset in threaded perls >= 5.11, issue 68.
        New type B::PAD isa B::AV (PADLIST for 5.17.5),
        New bytecodes newpadlx, padl_name, padl_sym (PADLIST for 5.17.5)
        Fixed CvGV_set causing Attempt to free unreferenced scalar in push_begin (42,43)
        Fixed -Do (peek ops)
        Renamed option -f to -F for files.
        Fixed READONLY magic and restricted hashes, issue 98
        Support IsCOW xpvshared strings (>=5.18)
        Fixed wrong xpvshared logic (5.10-5.17), issue 138
        Optimized away 0=default op and gp flags and pointers
        * Assembler (1.11): allow "newpadlx 0"
        * Disassembler (1.12): use B::Concise op_flags and private_flags
	* Stash (1.03): fix compilation for 5.8.8 and below: gv_fetchsv missing